Address review comments to remove references to persistence units and other changes